// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recurring HTTP parity > creates a rule with the Node field defaults and resolves the payee 1`] = `
{
  "autoCreateDaysBefore": 0,
  "bookId": 1,
  "businessDaysOnly": false,
  "createdAt": "<timestamp>",
  "daysOfMonth": null,
  "daysOfWeek": null,
  "endDate": null,
  "frequency": "monthly",
  "id": 2,
  "interval": 1,
  "isActive": true,
  "name": "Rent",
  "nextDate": "2030-01-31",
  "payee": {
    "bookId": 1,
    "createdAt": "<timestamp>",
    "id": 3,
    "name": "new Landlord",
  },
  "payeeId": 3,
  "startDate": "2030-01-31",
  "templateDescription": null,
  "templateSplits": [
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 2,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Rent",
        "parentId": null,
        "subtype": null,
        "type": "expense",
        "updatedAt": "<timestamp>",
      },
      "accountId": 2,
      "amount": 150000,
      "bookId": 1,
      "id": 3,
      "recurringRuleId": 2,
    },
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 1,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Checking",
        "parentId": null,
        "subtype": "bank",
        "type": "asset",
        "updatedAt": "<timestamp>",
      },
      "accountId": 1,
      "amount": -150000,
      "bookId": 1,
      "id": 4,
      "recurringRuleId": 2,
    },
  ],
  "weekOfMonth": null,
}
`;

exports[`recurring HTTP parity > creates a rule with the Node field defaults and resolves the payee 2`] = `
{
  "last": {
    "autoCreateDaysBefore": 0,
    "bookId": 1,
    "businessDaysOnly": false,
    "createdAt": "<timestamp>",
    "daysOfMonth": "[-1,15]",
    "daysOfWeek": null,
    "endDate": null,
    "frequency": "monthly",
    "id": 5,
    "interval": -1,
    "isActive": true,
    "name": "Last",
    "nextDate": "2030-02-28",
    "payee": null,
    "payeeId": null,
    "startDate": "2030-02-16",
    "templateDescription": null,
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 1,
        "bookId": 1,
        "id": 9,
        "recurringRuleId": 5,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -1,
        "bookId": 1,
        "id": 10,
        "recurringRuleId": 5,
      },
    ],
    "weekOfMonth": null,
  },
  "nth": {
    "autoCreateDaysBefore": 0,
    "bookId": 1,
    "businessDaysOnly": false,
    "createdAt": "<timestamp>",
    "daysOfMonth": "[]",
    "daysOfWeek": "[2]",
    "endDate": null,
    "frequency": "weekly",
    "id": 4,
    "interval": 1,
    "isActive": true,
    "name": "Nth",
    "nextDate": "2030-01-08",
    "payee": {
      "bookId": 1,
      "createdAt": "<timestamp>",
      "id": 1,
      "name": "Landlord",
    },
    "payeeId": 1,
    "startDate": "2030-01-01",
    "templateDescription": "5",
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 1,
        "bookId": 1,
        "id": 7,
        "recurringRuleId": 4,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -1,
        "bookId": 1,
        "id": 8,
        "recurringRuleId": 4,
      },
    ],
    "weekOfMonth": "2",
  },
  "weekly": {
    "autoCreateDaysBefore": 30,
    "bookId": 1,
    "businessDaysOnly": true,
    "createdAt": "<timestamp>",
    "daysOfMonth": null,
    "daysOfWeek": "[5,1]",
    "endDate": null,
    "frequency": "weekly",
    "id": 3,
    "interval": 2,
    "isActive": true,
    "name": "Gym",
    "nextDate": "2030-01-04",
    "payee": {
      "bookId": 1,
      "createdAt": "<timestamp>",
      "id": 1,
      "name": "Landlord",
    },
    "payeeId": 1,
    "startDate": "2030-01-02",
    "templateDescription": "Gym",
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 4000,
        "bookId": 1,
        "id": 5,
        "recurringRuleId": 3,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -4000,
        "bookId": 1,
        "id": 6,
        "recurringRuleId": 3,
      },
    ],
    "weekOfMonth": "every",
  },
}
`;

exports[`recurring HTTP parity > forces one rule's next occurrence by ID 1`] = `
[
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-02-04",
    "description": "Rent",
    "id": 1,
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payeeId": null,
    "recurringRuleId": 2,
    "splits": [
      {
        "accountId": 2,
        "amount": 150000,
        "bookId": 1,
        "id": 1,
        "transactionId": 1,
      },
      {
        "accountId": 1,
        "amount": -150000,
        "bookId": 1,
        "id": 2,
        "transactionId": 1,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
]
`;

exports[`recurring HTTP parity > leaves nextDate alone when an update does not change the schedule 1`] = `
{
  "autoCreateDaysBefore": 2,
  "bookId": 1,
  "businessDaysOnly": true,
  "createdAt": "<timestamp>",
  "daysOfMonth": null,
  "daysOfWeek": "[1]",
  "endDate": null,
  "frequency": "weekly",
  "id": 2,
  "interval": 1,
  "isActive": false,
  "name": "Renamed",
  "nextDate": "2030-01-14",
  "payee": null,
  "payeeId": null,
  "startDate": "2030-01-02",
  "templateDescription": "",
  "templateSplits": [
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 2,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Rent",
        "parentId": null,
        "subtype": null,
        "type": "expense",
        "updatedAt": "<timestamp>",
      },
      "accountId": 2,
      "amount": 100,
      "bookId": 1,
      "id": 3,
      "recurringRuleId": 2,
    },
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 1,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Checking",
        "parentId": null,
        "subtype": "bank",
        "type": "asset",
        "updatedAt": "<timestamp>",
      },
      "accountId": 1,
      "amount": -100,
      "bookId": 1,
      "id": 4,
      "recurringRuleId": 2,
    },
  ],
  "weekOfMonth": "every",
}
`;

exports[`recurring HTTP parity > lists rules with their payee and template split accounts, active first 1`] = `
[
  {
    "autoCreateDaysBefore": 0,
    "bookId": 1,
    "businessDaysOnly": false,
    "createdAt": "<timestamp>",
    "daysOfMonth": null,
    "daysOfWeek": null,
    "endDate": null,
    "frequency": "yearly",
    "id": 5,
    "interval": 1,
    "isActive": true,
    "name": "Early",
    "nextDate": "2030-01-15",
    "payee": null,
    "payeeId": null,
    "startDate": "2030-01-01",
    "templateDescription": null,
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 100,
        "bookId": 1,
        "id": 9,
        "recurringRuleId": 5,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -100,
        "bookId": 1,
        "id": 10,
        "recurringRuleId": 5,
      },
    ],
    "weekOfMonth": null,
  },
  {
    "autoCreateDaysBefore": 0,
    "bookId": 1,
    "businessDaysOnly": false,
    "createdAt": "<timestamp>",
    "daysOfMonth": null,
    "daysOfWeek": "[1,3]",
    "endDate": "2031-01-01",
    "frequency": "weekly",
    "id": 3,
    "interval": 1,
    "isActive": true,
    "name": "Alpha",
    "nextDate": "2030-02-01",
    "payee": null,
    "payeeId": null,
    "startDate": "2030-01-01",
    "templateDescription": null,
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Electric",
          "parentId": 3,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 900,
        "bookId": 1,
        "id": 5,
        "recurringRuleId": 3,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -900,
        "bookId": 1,
        "id": 6,
        "recurringRuleId": 3,
      },
    ],
    "weekOfMonth": "last",
  },
  {
    "autoCreateDaysBefore": 3,
    "bookId": 1,
    "businessDaysOnly": true,
    "createdAt": "<timestamp>",
    "daysOfMonth": "[1,-1]",
    "daysOfWeek": null,
    "endDate": null,
    "frequency": "monthly",
    "id": 2,
    "interval": 1,
    "isActive": true,
    "name": "Zebra",
    "nextDate": "2030-02-01",
    "payee": {
      "bookId": 1,
      "createdAt": "<timestamp>",
      "id": 1,
      "name": "Landlord",
    },
    "payeeId": 1,
    "startDate": "2030-01-01",
    "templateDescription": "Rent",
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 150000,
        "bookId": 1,
        "id": 3,
        "recurringRuleId": 2,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -150000,
        "bookId": 1,
        "id": 4,
        "recurringRuleId": 2,
      },
    ],
    "weekOfMonth": null,
  },
  {
    "autoCreateDaysBefore": 0,
    "bookId": 1,
    "businessDaysOnly": false,
    "createdAt": "<timestamp>",
    "daysOfMonth": null,
    "daysOfWeek": null,
    "endDate": null,
    "frequency": "daily",
    "id": 4,
    "interval": 3,
    "isActive": false,
    "name": "Paused",
    "nextDate": "2029-06-01",
    "payee": null,
    "payeeId": null,
    "startDate": "2029-01-01",
    "templateDescription": null,
    "templateSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 100,
        "bookId": 1,
        "id": 7,
        "recurringRuleId": 4,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -100,
        "bookId": 1,
        "id": 8,
        "recurringRuleId": 4,
      },
    ],
    "weekOfMonth": null,
  },
]
`;

exports[`recurring HTTP parity > processes every due rule, catching up and deactivating past the end date 1`] = `
[
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2025-01-02",
    "description": "Coffee",
    "id": 1,
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payeeId": 1,
    "recurringRuleId": 2,
    "splits": [
      {
        "accountId": 2,
        "amount": 500,
        "bookId": 1,
        "id": 1,
        "transactionId": 1,
      },
      {
        "accountId": 1,
        "amount": -500,
        "bookId": 1,
        "id": 2,
        "transactionId": 1,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2025-01-03",
    "description": "Coffee",
    "id": 2,
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payeeId": 1,
    "recurringRuleId": 2,
    "splits": [
      {
        "accountId": 2,
        "amount": 500,
        "bookId": 1,
        "id": 3,
        "transactionId": 2,
      },
      {
        "accountId": 1,
        "amount": -500,
        "bookId": 1,
        "id": 4,
        "transactionId": 2,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2025-01-06",
    "description": "Coffee",
    "id": 3,
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payeeId": 1,
    "recurringRuleId": 2,
    "splits": [
      {
        "accountId": 2,
        "amount": 500,
        "bookId": 1,
        "id": 5,
        "transactionId": 3,
      },
      {
        "accountId": 1,
        "amount": -500,
        "bookId": 1,
        "id": 6,
        "transactionId": 3,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
]
`;

exports[`recurring HTTP parity > projects occurrences in an explicit window 1`] = `
[
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-02-12",
    "description": null,
    "id": -40000,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": 4,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 50,
        "bookId": 1,
        "id": 4000000,
        "transactionId": -40000,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -50,
        "bookId": 1,
        "id": 3999999,
        "transactionId": -40000,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-02-28",
    "description": "Rent",
    "id": -20000,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": {
      "bookId": 1,
      "createdAt": "<timestamp>",
      "id": 1,
      "name": "Landlord",
    },
    "payeeId": 1,
    "recurringRuleId": 2,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 150000,
        "bookId": 1,
        "id": 2000000,
        "transactionId": -20000,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -150000,
        "bookId": 1,
        "id": 1999999,
        "transactionId": -20000,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-03-01",
    "description": null,
    "id": -30000,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": 3,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Electric",
          "parentId": 3,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 700,
        "bookId": 1,
        "id": 3000000,
        "transactionId": -30000,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -700,
        "bookId": 1,
        "id": 2999999,
        "transactionId": -30000,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-03-04",
    "description": null,
    "id": -30001,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": 3,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Electric",
          "parentId": 3,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 700,
        "bookId": 1,
        "id": 3000100,
        "transactionId": -30001,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -700,
        "bookId": 1,
        "id": 3000099,
        "transactionId": -30001,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-03-04",
    "description": null,
    "id": -30002,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": 3,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Electric",
          "parentId": 3,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 700,
        "bookId": 1,
        "id": 3000200,
        "transactionId": -30002,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -700,
        "bookId": 1,
        "id": 3000199,
        "transactionId": -30002,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-03-04",
    "description": null,
    "id": -30003,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": 3,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Electric",
          "parentId": 3,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 700,
        "bookId": 1,
        "id": 3000300,
        "transactionId": -30003,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -700,
        "bookId": 1,
        "id": 3000299,
        "transactionId": -30003,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-03-12",
    "description": null,
    "id": -40001,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": 4,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 50,
        "bookId": 1,
        "id": 4000100,
        "transactionId": -40001,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -50,
        "bookId": 1,
        "id": 4000099,
        "transactionId": -40001,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-03-28",
    "description": "Rent",
    "id": -20001,
    "investmentSplits": [],
    "isFloating": false,
    "isProjected": true,
    "isReconciled": false,
    "notes": null,
    "payee": {
      "bookId": 1,
      "createdAt": "<timestamp>",
      "id": 1,
      "name": "Landlord",
    },
    "payeeId": 1,
    "recurringRuleId": 2,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 2,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Rent",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 2,
        "amount": 150000,
        "bookId": 1,
        "id": 2000100,
        "transactionId": -20001,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -150000,
        "bookId": 1,
        "id": 2000099,
        "transactionId": -20001,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
]
`;

exports[`recurring HTTP parity > reads one rule by a parseInt ID and refuses a missing or foreign one 1`] = `
{
  "autoCreateDaysBefore": 0,
  "bookId": 1,
  "businessDaysOnly": false,
  "createdAt": "<timestamp>",
  "daysOfMonth": null,
  "daysOfWeek": null,
  "endDate": null,
  "frequency": "monthly",
  "id": 2,
  "interval": 1,
  "isActive": true,
  "name": "Rent",
  "nextDate": "2030-01-01",
  "payee": {
    "bookId": 1,
    "createdAt": "<timestamp>",
    "id": 1,
    "name": "Landlord",
  },
  "payeeId": 1,
  "startDate": "2030-01-01",
  "templateDescription": null,
  "templateSplits": [
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 2,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Rent",
        "parentId": null,
        "subtype": null,
        "type": "expense",
        "updatedAt": "<timestamp>",
      },
      "accountId": 2,
      "amount": 150000,
      "bookId": 1,
      "id": 3,
      "recurringRuleId": 2,
    },
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 1,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Checking",
        "parentId": null,
        "subtype": "bank",
        "type": "asset",
        "updatedAt": "<timestamp>",
      },
      "accountId": 1,
      "amount": -150000,
      "bookId": 1,
      "id": 4,
      "recurringRuleId": 2,
    },
  ],
  "weekOfMonth": null,
}
`;
